# tidbyt_calendar

./: .gitignore  CLAUDE.md  DEV_PLAN.md  Dockerfile  LICENSE  README.md  SPEC.md  config.example.yaml  pyproject.toml
deploy/: tidbyt-calendar.service
src/tidbyt_calendar/: __init__.py  __main__.py  authorize.py  calendar_client.py  config.py  render.py
src/tidbyt_calendar/tidbyt/: app.star
tests/: test_calendar_client.py  test_config.py  test_render.py
