[project]
name = "tidbyt-calendar"
version = "0.1.0"
description = "Show the next 5 Google Calendar events on a Tidbyt (local Pixlet push server)."
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "APScheduler>=3.10",
    "requests>=2.32",
    "pyyaml>=6.0",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
]

[project.scripts]
tidbyt-calendar = "tidbyt_calendar.__main__:main"
tidbyt-calendar-authorize = "tidbyt_calendar.authorize:main"

[dependency-groups]
dev = [
    "pyright>=1.1.370",
    "ruff>=0.5",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tidbyt_calendar"]

[tool.hatch.build.targets.wheel.force-include]
"src/tidbyt_calendar/tidbyt/app.star" = "tidbyt_calendar/tidbyt/app.star"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
